# message_processor

./: .gitmodules  README.md
cpp/: CMakeLists.txt
cpp/include/interfaces/: msg_proc_interface.h
cpp/include/server/: file_accumulator.h  msg_proc.h  msg_resp.h  tcp_server.h  worker.h
cpp/include/util/: buffer.h  connection_info.h  encode_decode.h  file_handler.h  logger.h  shared_queue.h
cpp/src/client/: main.cpp
cpp/src/main/: main.cpp
cpp/src/server/: CMakeLists.txt  file_accumulator.cpp  main.cpp  msg_proc.cpp  tcp_server.cpp  worker.cpp
cpp/src/util/: CMakeLists.txt  encode_decode.cpp  file_handler.cpp  shared_queue.cpp
docs/: analysis.csv  profiling.md  system_design.md
test/python/: scale_clients.py
